--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HW</title>
   </head>
-  <body></body>
+  <body>
+    <script src="task2.js"></script>
+    <script src="main.js"></script>
+  </body>
 </html>
